@@ -44,7 +44,7 @@ class ezcDocumentRstDocbookVisitorTests extends ezcTestCase
         }
 
         return self::$testDocuments;
-        return array_slice( self::$testDocuments, -1, 1 );
+        return array_slice( self::$testDocuments, -2, 1 );
     }
 
     /**
